--- a/webapp/manifest.json
+++ b/webapp/manifest.json
@@ -52,7 +52,8 @@
 				}
 			},
 			"": {
-				"dataSource": "mainService"
+				"dataSource": "mainService",
+				"preload": true
 			}
 		},
 		"routing": {
